--- a/map.css
+++ b/map.css
@@ -8,3 +8,25 @@ top: 0;
 bottom: 0;
 width: 100%;
 }
+/* #baixar { */
+  /* position: absolute; */
+  /* top: 100px; */
+  /* right: 20px; */
+  /* padding: 10px; */
+  /* z-index: 400; */
+/* } */
+#baixar {
+  position: absolute;
+  z-index: 400;
+  bottom: 20px;
+  right: 5px;
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 15px;
+}
+#baixar:hover {
+  background-color: RoyalBlue;
+}
